<resources>
    <string name="app_name">Tipping Guide</string>
    <string name="action_settings">Settings</string>
    <string name="total_bill">Total Bill</string>

    <string name="tip_percent">Tip Percent</string>
    <string name="split_number">Split Number</string>
    <string name="total_amount_to_pay">Total Amount To Pay</string>
    <string name="total_tip">Total Tip To Pay</string>
    <string name="tip_per_person">Tip Amount Per Person</string>
    <string name="calculate_tip">Calculate Tip</string>


    <string name="one">One</string>
    <string name="in">In</string>
    <string name="equal">Is Equal To</string>
    <string name="result">Click Calculate for Result</string>
    <string name="calculate">Calculate</string>
    <string name="powered">Powered By Yahoo! Finance</string>
    <string-array name="name">
        <item >Indian Rupee</item>
        <item >US Dollar</item>
        <item >European Union Euro</item>
        <item >Canadian Dollar</item>
        <item >Australian Dollar</item>
        <item >Singapore Dollar</item>
    </string-array>
    <string-array name="name2">
        <item >-------</item>
        <item >Morocco</item>
        <item >Israel</item>
        <item >Costa Rica</item>
        <item >India</item>
        <item >Greece</item>
        <item >Brazil</item>
        <item >Canada</item>
        <item >Mexico</item>
        <item >Australia</item>
        <item >Malaysia</item>
        <item >France</item>
        <item >Egypt</item>
        <item >South Africa</item>
        <item >Italy</item>
        <item >Dubai</item>
        <item >Iran</item>
        <item >Jordan</item>
        <item >Qatar</item>
        <item >Saudi Arabia</item>
        <item >United Arab Emirates</item>
        <item >Argentina</item>
        <item >Chile</item>
        <item >Colombia</item>
        <item >Ecuador</item>
        <item >Nicaragua</item>
        <item >Peru</item>
        <item >Caribbean</item>
        <item >China</item>
        <item >Cambodia</item>
        <item >Indonesia</item>
        <item >Philippines</item>
        <item >Singapore</item>
        <item >South Korea</item>
        <item >Taiwan</item>
        <item >Thailand</item>
        <item >Vietnam</item>
        <item >Croatia</item>
        <item >Czech Republic</item>
        <item >Estonia</item>
        <item >Germany</item>
        <item >Hungary</item>
        <item >Iceland</item>
        <item >Russia</item>
        <item >Scandinavia</item>
        <item >Spain</item>
        <item >Switzerland</item>
        <item >Turkey</item>
        <item >United Kingdom</item>
    </string-array>
    <string-array name="value">
        <item >INR</item>
        <item >USD</item>
        <item >EUR</item>
        <item >CAD</item>
        <item >AUD</item>
        <item >SGD</item>
    </string-array>


</resources>