<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculate_tips"
        android:layout_marginBottom="0dp"
        android:background="#ffffff"
        android:padding="16dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/first_binary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:text="@string/total_bill"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bill_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_binary"
                android:layout_marginTop="4dp"
                android:background="@color/calTextView"
                android:inputType="numberDecimal"
                android:lines="3"
                android:padding="8dp" />

            <TextView
                android:id="@+id/tip_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bill_value"
                android:layout_marginTop="24dp"
                android:text="@string/tip_percent"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tip_percent"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/split_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekBar"
                android:layout_marginTop="24dp"
                android:text="@string/split_number"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/split_number"
                android:layout_marginTop="4dp"
                android:max="10" />

            <TextView
                android:id="@+id/total_to_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekBar_one"
                android:layout_marginTop="24dp"
                android:text="@string/total_amount_to_pay"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_to_pay_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/total_to_pay"
                android:layout_marginTop="4dp"
                android:background="@color/calTextView"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/total_to_pay_result"
                android:layout_marginTop="24dp"
                android:text="@string/total_tip"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_tip_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/total_tip"
                android:layout_marginTop="4dp"
                android:background="@color/calTextView"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tip_per_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/total_tip_result"
                android:layout_marginTop="24dp"
                android:text="@string/tip_per_person"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tip_per_person_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tip_per_person"
                android:layout_marginTop="4dp"
                android:background="@color/calTextView"
                android:textColor="@color/textColor"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
<Button
    android:id="@+id/calculate_tips"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/calculate_tip"
    android:textAllCaps="false"
    android:background="@color/calcButton"
    android:padding="12dp"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="8dp"
    android:layout_alignParentBottom="true"/>
</RelativeLayout>